--- a/timeline/index.html
+++ b/timeline/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://tpt-ochanomizu.github.io/tpt-medical-it/timeline/" />
 <meta property="og:site_name" content="T/T" />
 <script type="application/ld+json">
-{"headline":"Twitter","description":"Medical/Dental students playing with Information Technologies and Mathematics.","@type":"WebPage","url":"https://tpt-ochanomizu.github.io/tpt-medical-it/timeline/","@context":"https://schema.org"}</script>
+{"description":"Medical/Dental students playing with Information Technologies and Mathematics.","@type":"WebPage","url":"https://tpt-ochanomizu.github.io/tpt-medical-it/timeline/","headline":"Twitter","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/tpt-medical-it/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://tpt-ochanomizu.github.io/tpt-medical-it/feed.xml" title="T/T" /><link rel="shortcut icon" type="image/x-icon" href="/tpt-medical-it/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Twitter | T/T</title>
@@ -26,7 +26,7 @@
 <meta property="og:url" content="https://tpt-ochanomizu.github.io/tpt-medical-it/timeline/" />
 <meta property="og:site_name" content="T/T" />
 <script type="application/ld+json">
-{"headline":"Twitter","description":"Medical/Dental students playing with Information Technologies and Mathematics.","@type":"WebPage","url":"https://tpt-ochanomizu.github.io/tpt-medical-it/timeline/","@context":"https://schema.org"}</script>
+{"description":"Medical/Dental students playing with Information Technologies and Mathematics.","@type":"WebPage","url":"https://tpt-ochanomizu.github.io/tpt-medical-it/timeline/","headline":"Twitter","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
